Fri Jun 11 04:31:02 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.[hc]: made dialog actions private.
	added profile view menu item. added
	bst_app_show_release_notes() to show release notes dialog.

	* beast-gtk/bstmain.c: give GUI thread a name and adapt to
	bstapp.h changes.

	* beast-gtk/bstprofiler.[hc]: new dialog implementation, showing
	CPU usage statistics.

	* beast-gtk/dialogs/gadgets-beast.xml: added profiler dialog.

Thu Jun 10 02:32:49 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam-choice.c: set proper tooltips on menu items.

	* beast-gtk/bstpatternctrl.c: handle 1/128, 1/128. and 1/128T notes.

	* beast-gtk/bstrecords.idl: added 1/128, 1/128. and 1/128T note lengths.

	* beast-gtk/gxk/gxkutils.[ch]: added convenience function
	gxk_widget_set_tooltip().

Thu Jun 10 01:58:03 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkauxwidgets.c: changed property, provide a bool
	keep-menubar-image per menu item. since stupid Gtk+-2.4 decides to
	change menu item image visibility behind the users back, we have
	to get rid of images in menu items in menubars the hard way: remove
	the widget unless keep-menubar-image is TRUE.

	* beast-gtk/dialogs/gadgets-standard.xml: removed old setting.

Thu Jun 10 01:00:22 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/gadgets-standard.xml: enable tooltips on menu-items.

Wed Jun  9 18:36:53 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstpianorollctrl.c: fix full vs. whole note wording.
	add 1/32, 1/64, 1/128 note lengths and quantization boundaries.

	* beast-gtk/bsttrackrollctrl.c: fix full vs. whole note wording.
	add 1/32, 1/64, 1/128 quantization boundaries.

	* beast-gtk/icons/Makefile.am:
	* beast-gtk/icons/note-32.png:
	* beast-gtk/icons/note-64.png:
	* beast-gtk/icons/note-128.png:
	* beast-gtk/icons/qnote-32.png:
	* beast-gtk/icons/qnote-64.png:
	* beast-gtk/icons/qnote-128.png:
	* beast-gtk/icons/notes.xcf:
	added new stock icons.

Mon Jun  7 19:21:37 2004  Tim Janik  <timj@gtk.org>
